<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/loginbackground" >

    <ScrollView
        android:id="@+id/loginFragment"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
           >



            <!-- CardView containing email, password, and remember me -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                android:color="#00000000"
                android:backgroundTint="@android:color/transparent"
                android:shadowColor="@android:color/background_dark"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dp"
            >

                <!-- Content inside the CardView -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/blur_background"
                    android:filterTouchesWhenObscured="true"
                    android:layerType="software"
                    >

                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/login"
                        android:textColor="#411900"
                        android:textSize="32sp" />


                    <com.taskeasy.design.EditTextInputLayout
                        android:id="@+id/emailText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:layout_marginTop="20dp"
                        android:maxWidth="240dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/loginText"
                        android:inputType="textEmailAddress"
                        app:iconStart="@drawable/ic_mail"
                        app:inputHint="Email"
                        app:labelText="Email"
                        tools:ignore="HardcodedText" />

                    <com.taskeasy.design.EditTextInputLayout
                        android:id="@+id/passwordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        app:iconStart="@drawable/ic_lock"
                        app:inputHint="Password"
                        app:inputText="Password"
                        android:layout_centerHorizontal="true"
                        android:maxWidth="240dp"
                        app:isPasswordTransformation="true"
                        app:labelText="Password"
                        android:layout_below="@id/emailText"
                        tools:ignore="HardcodedText" />

                    <!-- Login Button  -->
                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/passwordText"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/remember_me"
                        android:textColor="#411900"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/remember_me"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="#411900"
                        android:textColor="#C0B1B1"
                        android:minWidth="251dp"
                        android:text="@string/log_in"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- OrText TextView -->

            <!-- SignInButton -->

            <TextView
                android:id="@+id/orText"
                android:layout_width="279dp"
                android:layout_height="54dp"
                android:layout_below="@id/cardView"
                android:layout_centerHorizontal="true"
                android:text="@string/or"
                android:textColor="#C0B1B1"
                android:textSize="30sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@id/orText"
                android:layout_marginTop="16dp" />

            <!-- RegisterButton -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegisters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in_button"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#411900"
                android:textColor="#C0B1B1"
                android:minWidth="220dp"
                android:text="@string/register"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>
</layout>
